tabs fixed on mobile

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -2174,7 +2174,7 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #e5e5e5;
+  /* background-color: #e5e5e5; */
   background-clip: padding-box;
   border: 1px solid #ced4da;
   appearance: none;
